--- a/src/scss/menu/dataview/filter.scss
+++ b/src/scss/menu/dataview/filter.scss
@@ -60,6 +60,9 @@
 			.clickable { width: 100%; height: 20px; display: flex; }
 			.buttons { position: absolute; right: 8px; top: 4px; }
 
+			.icon.delete { transition: none; }
+			.name { @include text-overflow-nw; }
+
 			.icon.clear { 
 				width: 20px; height: 20px; background-image: url('~img/icon/clear0.svg'); position: absolute; right: 10px; top: 4px;
 				cursor: pointer; opacity: 0; margin: 0px; transition: opacity 0.2s ease-in-out;
