Data type fixes for Date cells and filters

--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -180,5 +180,8 @@
 		.item.active { color: #e89d00; }
 		.item.active::before { opacity: 0; }
 		.item.active { background: #fef3c5; color: #e89d00; }
+		.item.active {
+			.icon.chk { display: none; }
+		}
 	}
 }
