--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -61,6 +61,7 @@
 		.icon.resize { background-image: url('~img/icon/menu/action/resize0.svg'); }
 		.icon.template { background-image: url('~img/icon/menu/action/template0.svg'); }
 		.icon.fav { background-image: url('~img/icon/menu/action/fav0.svg'); }
+		.icon.unfav { background-image: url('~img/icon/menu/action/unfav0.svg'); }
 
 		.icon.align.left { background-image: url('~img/icon/menu/align/left.svg'); }
 		.icon.align.center { background-image: url('~img/icon/menu/align/center.svg'); }
