--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -119,11 +119,11 @@
 		.item.withDescription { padding: 8px 14px; height: 56px; }
 		.item.withDescription {
 			.icon, .iconObject { width: 40px; height: 40px; border-radius: 6px; position: absolute; left: 14px; top: 8px; }
-			.descr { @include text-small; @include text-overflow-nw; height: 18px; color: #6c6a5f; }
+			.descr { @include text-small; @include text-overflow-nw; line-height: 20px; height: 20px; color: #6c6a5f; }
 			.descr:empty { display: none; }
 			.info { padding-left: 52px; line-height: 40px; }
 			.txt { width: 100%; }
-			.name { line-height: 22px; }
+			.name { line-height: 20px; }
 		}
 
 		.item.withCaption { display: flex; }
