--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -41,7 +41,7 @@
 			}
 
 			.icon.arrow { 
-				position: absolute; top: 50%; margin-top: -17px; width: 32px; height: 32px; background-image: url('~img/arrow/template0.svg'); 
+				position: absolute; top: 0px; width: 32px; height: 100%; background-image: url('~img/arrow/template0.svg'); 
 				cursor: pointer; background-size: 8px 32px;
 			}
 			.icon.arrow:hover { background-image: url('~img/arrow/template1.svg'); }
