--- a/src/scss/menu/dataview/option.scss
+++ b/src/scss/menu/dataview/option.scss
@@ -11,7 +11,7 @@
 
 		.item { display: flex; height: 28px; }
 		.item {
-			.buttons { display: none; }
+			.buttons { display: none; position: absolute; right: 8px; top: 4px; }
 		}
 		.item:hover {
 			.clickable { margin-right: 6px; }
@@ -25,7 +25,7 @@
 			.clickable { width: calc(100% - 22px); }
 		}
 		.item:hover {
-			.clickable { width: calc(100% - 50px); }
+			.clickable { width: calc(100% - 66px); }
 		}
 	}
 
