--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -89,7 +89,7 @@
 	.iconImage { width: 100%; height: 100%; left: 0px; top: 0px; margin: 0px; }
 } 
 
-.iconObject.c48, .iconObject.c64 {
+.iconObject.c40, .iconObject.c48, .iconObject.c64 {
 	.iconImage { width: 100%; height: 100%; margin: 0px; left: 0px; top: 0px; }
 }
 .iconObject.c48.isPage, .iconObject.c48.isImage {
