--- a/src/scss/component/objectPreviewBlock.scss
+++ b/src/scss/component/objectPreviewBlock.scss
@@ -1,7 +1,12 @@
 @import "~scss/_vars";
 
-.objectPreviewBlock { padding: 32px 32px 0px 32px; width: 344px; height: 216px; overflow: hidden; border: 1px solid $colorLightGrey; border-radius: 8px; }
+.objectPreviewBlock { 
+	padding: 32px 32px 0px 32px; width: 344px; height: 216px; overflow: hidden; border: 1px solid $colorLightGrey; border-radius: 8px; 
+	position: relative;
+}
 .objectPreviewBlock {
+	.cover { position: absolute; height: 60px; }
+
 	.heading { display: block; }
 	.heading {
 		.iconObject { display: inline-block; background-color: #f3f2ec; border-radius: 8px; }
