--- a/src/scss/component/objectPreviewBlock.scss
+++ b/src/scss/component/objectPreviewBlock.scss
@@ -1,20 +1,42 @@
 @import "~scss/_vars";
 
 .objectPreviewBlock { 
-	padding: 32px 32px 0px 32px; width: 344px; height: 216px; overflow: hidden; border: 1px solid $colorLightGrey; border-radius: 8px; 
+	padding: 32px 40px; width: 344px; height: 216px; overflow-x: hidden; overflow-y: auto; border: 1px solid $colorLightGrey; border-radius: 8px; 
 	position: relative;
 }
 .objectPreviewBlock {
-	.cover { position: absolute; height: 60px; }
+	.cover { position: absolute; left: -1px; top: -1px; width: calc(100% + 2px); height: 86px; }
 
-	.heading { display: block; }
+	.heading { display: block; margin-bottom: 18px; }
 	.heading {
-		.iconObject { display: inline-block; background-color: #f3f2ec; border-radius: 8px; }
-		.name { display: block; @include text-header3; }
-		.description {  }
-		.author { color: $colorDarkGrey; }
+		.iconObject { display: inline-block; background-color: #f3f2ec; border-radius: 8px; margin-bottom: 10px; }
+		.name { display: block; @include text-paragraph; font-weight: bold; }
+		.description { @include text-small; }
+		.author { @include text-very-small; color: $colorDarkGrey; }
 	}
-} 
+
+	.blocks {
+		.element { border: 1px solid red; display: block; }
+		.element {
+			.inner { width: 100%; display: flex; }
+			.inner {
+				.icon { width: 16px; height: 16px; margin-right: 4px; flex-shrink: 0; vertical-align: top; }
+				.icon.check { background-image: url('~img/icon/object/preview/check0.svg'); }
+
+				.line { margin: 5px 0px; height: 6px; background: #eae9e0; display: inline-block; vertical-align: top; width: 100%; }
+			}
+			.children { width: 100%; }
+		}
+
+		.element.blockText.header1 { @include text-small; font-weight: bold; }
+		.element.blockText.header2 { @include text-small; font-weight: bold; }
+		.element.blockText.header3 { @include text-small; font-weight: bold; }
+
+		.element.blockLayout.c0 > .children { display: flex; padding: 0px; }
+	}
+}
+
+.objectPreviewBlock.withCover { padding-top: 46px; }
 
 .objectPreviewBlock.align1 {
 	.heading { text-align: center; }
