--- a/src/scss/popup/page.scss
+++ b/src/scss/popup/page.scss
@@ -46,6 +46,10 @@
 				.block.blockCover.align1 .elements .buttons { padding-left: 68px; }
 			}
 
+			.editorWrapper.isHuman.withIcon { 
+				.editorControls { height: 274px; }
+			}
+
 			.editorWrapper.isHuman.withIconAndCover {
 				.block.blockCover .elements .buttons { padding-left: 150px; }
 			}
