--- a/src/scss/component/objectPreviewBlock.scss
+++ b/src/scss/component/objectPreviewBlock.scss
@@ -6,7 +6,7 @@
 	.border { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; border: 1px solid #dfddd0; border-radius: 8px; }
 	.cover { position: absolute; height: 86px; border-radius: 8px 8px 0px 0px; }
 
-	.heading { display: block; margin-bottom: 14px; }
+	.heading { display: block; margin-bottom: 14px; position: relative; z-index: 1; }
 	.heading {
 		.iconObject { display: inline-block; background-color: #f3f2ec; border-radius: 8px; margin-bottom: 10px; }
 		.name { display: block; @include text-paragraph; font-weight: bold; }
@@ -53,7 +53,8 @@
 	}
 }
 
-.objectPreviewBlock.withCover .scroller { padding-top: 46px; }
+.objectPreviewBlock.withCover .scroller { padding-top: 104px; }
+.objectPreviewBlock.withIconAndCover .scroller { padding-top: 46px; }
 
 .objectPreviewBlock.align1 {
 	.heading { text-align: center; }
