--- a/src/scss/component/objectPreviewBlock.scss
+++ b/src/scss/component/objectPreviewBlock.scss
@@ -2,21 +2,28 @@
 
 .objectPreviewBlock { width: 344px; height: 216px; border-radius: 8px; overflow: hidden; position: relative; }
 .objectPreviewBlock {
-	.scroller { padding: 32px 40px 16px 30px; position: relative; z-index: 1; overflow-x: hidden; overflow-y: auto; height: 100%; }
+	.scroller { padding: 32px 40px 16px 40px; position: relative; z-index: 1; overflow-x: hidden; overflow-y: auto; height: 100%; }
 	.border { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; border: 1px solid #dfddd0; border-radius: 8px; }
 	.cover { position: absolute; height: 86px; border-radius: 8px 8px 0px 0px; }
 
 	.heading { display: block; margin-bottom: 14px; position: relative; z-index: 1; }
 	.heading {
 		.iconObject { display: inline-block; background-color: #f3f2ec; border-radius: 8px; margin-bottom: 10px; }
-		.name { display: block; @include text-paragraph; font-weight: bold; }
+		.name { display: block; @include text-paragraph; font-weight: bold; position: relative; }
+		.name {
+			.icon.checkbox { 
+				position: absolute; top: 5px; left: -20px; width: 14px; height: 14px; background-image: url('~img/icon/object/checkbox0.svg'); 
+			}
+			.icon.checkbox.active { background-image: url('~img/icon/object/checkbox1.svg'); }
+		}
+
 		.description { @include text-small; }
 		.author { @include text-very-small; color: $colorDarkGrey; }
 	}
 
 	.blocks { z-index: 1; }
 	.blocks {
-		.element { border: 1px solid red; display: block; }
+		.element { display: block; }
 		.element {
 			.inner { width: 100%; display: flex; }
 			.inner {
