--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -10,10 +10,14 @@
 		}
 		.block.blockFeatured { padding: 0px; margin: 0px; line-height: 28px; }
 
-		.head { display: flex; margin-bottom: 35px; }
+		.head { display: flex; margin-bottom: 35px; positon: relative; }
 		.head {
 			.side.left { width: 96px; flex-shrink: 0; margin-right: 32px; }
-			.side.right { width: calc(100% - 128px); }
+			.side.center { width: calc(100% - 214px); }
+			.side.right { width: 86px; text-align: right; position: relative; }
+			.side.right {
+				.button { position: absolute; top: 50%; right: 0px; margin-top: -18px; height: 36px; line-height: 34px; }
+			}
 
 			.title { @include text-header1; }
 			.descr { @include text-paragraph; margin: 5px 0px 9px 0px; }
