--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -92,7 +92,7 @@
 .iconObject.c40, .iconObject.c48, .iconObject.c64 {
 	.iconImage { width: 100%; height: 100%; margin: 0px; left: 0px; top: 0px; }
 }
-.iconObject.c48.isPage, .iconObject.c48.isImage {
+.iconObject.c48.isPage, .iconObject.c48.isImage, .iconObject.c48.isSet {
 	.iconImage { border-radius: 8px; }
 }
 
