--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -36,7 +36,7 @@
 		
 		.emptyToggle { 
 			display: none; margin-left: 28px; color: $colorDarkGrey; position: relative; z-index: 2; cursor: pointer;
-			transition: $transitionFast; 
+			transition: $transitionFast; @include text-overflow-nw;
 		}
 		.emptyToggle:hover { color: $colorBlack; }
 	}
