--- a/src/scss/component/objectPreviewBlock.scss
+++ b/src/scss/component/objectPreviewBlock.scss
@@ -11,7 +11,7 @@
 	.heading { display: block; margin-bottom: 14px; position: relative; z-index: 1; }
 	.heading {
 		.iconObject { display: inline-block; background-color: #f3f2ec; border-radius: 8px; margin-bottom: 10px; }
-		.name { display: block; @include text-paragraph; font-weight: bold; position: relative; }
+		.name { display: block; @include text-paragraph; @include text-overflow-nw; font-weight: bold; position: relative; }
 		.name {
 			.icon.checkbox { 
 				position: absolute; top: 5px; left: -20px; width: 14px; height: 14px; background-image: url('~img/icon/object/checkbox0.svg'); 
@@ -19,7 +19,7 @@
 			.icon.checkbox.active { background-image: url('~img/icon/object/checkbox1.svg'); }
 		}
 
-		.description { @include text-small; }
+		.description { @include text-small; @include text-overflow-nw; }
 		.author { @include text-very-small; color: $colorDarkGrey; }
 	}
 
