--- a/src/scss/page/main/store.scss
+++ b/src/scss/page/main/store.scss
@@ -58,8 +58,9 @@
 
 				.info { height: 100%; position: relative; }
 				.info {
+					.txt { width: 100%; }
 					.name { font-weight: 500; @include text-overflow-nw; }
-					.descr { @include text-small; color: $colorDarkGrey; @include text-overflow-nw; margin: 2px 0px 3px 0px; }
+					.descr { width: 100%; @include text-small; color: $colorDarkGrey; @include text-overflow-nw; margin: 2px 0px 3px 0px; }
 					.author { @include text-small; color: #6c6a5f; line-height: 18px; }
 					.line { width: 100%; height: 1px; background: #eae9e0; position: absolute; left: 0px; }
 				}
@@ -96,10 +97,12 @@
 	}
 
 	.wrapper.relation {
-		.mid { padding-bottom: 114px; }
 		.mid {
 			.label { margin: 0px; }
 			.button { display: none; }
+		}
+		.item {
+			.descr { display: none; }
 		}
 	}
 }
