--- a/src/scss/menu/smile.scss
+++ b/src/scss/menu/smile.scss
@@ -3,7 +3,7 @@
 .menus {
 	.menu.menuSmile { width: 384px; user-select: none; }
 	.menu.menuSmile {
-		.content { overflow: visible; }
+		.content { overflow: visible; padding-bottom: 0px; }
 
 		.head { color: $colorDarkGrey; font-weight: 500; padding: 3px 16px 10px 16px; border-bottom: 1px solid $colorLightGrey; }
 		.head {
@@ -13,6 +13,9 @@
 		}
 		
 		.filter.withHead { padding-top: 11px; }
+		.filter {
+			.inner { height: 32px; }
+		}
 	
 		.items { overflow: auto; height: 288px; }
 		.empty { height: 100%; line-height: 256px; padding: 16px; text-align: center; }
