--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -77,7 +77,7 @@
 	.icon.big:hover, .icon.big.active { background-color: #f3f2ec; }
 
 	.path { 
-		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px;
+		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px; color: #929082;
 		line-height: 24px; width: 100%; text-align: center; transition: $transitionFast; -webkit-app-region: no-drag;
 	}
 	.path {
