--- a/src/scss/component/objectPreviewBlock.scss
+++ b/src/scss/component/objectPreviewBlock.scss
@@ -2,10 +2,10 @@
 
 .objectPreviewBlock { width: 344px; height: 216px; border-radius: 8px; overflow: hidden; position: relative; }
 .objectPreviewBlock {
-	.loaderWrapper { width: 100%; height: 100%; border: 1px solid #dfddd0; border-radius: 8px; }
+	.loaderWrapper { width: 100%; height: 100%; border: 1px solid $colorLightGrey; border-radius: 8px; }
 
 	.scroller { padding: 32px 40px 16px 40px; position: relative; z-index: 1; overflow: hidden; height: calc(100% - 1px); }
-	.border { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; border: 1px solid #dfddd0; border-radius: 8px; }
+	.border { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; border: 1px solid $colorLightGrey; border-radius: 8px; }
 	.cover { position: absolute; height: 86px; border-radius: 8px 8px 0px 0px; }
 
 	.heading { display: block; margin-bottom: 14px; position: relative; z-index: 1; }
@@ -50,7 +50,7 @@
 				.bookmark {
 					.line { height: 4px; }
 
-					.side.left { width: 66.66%; border: 1px solid #dfddd0; border-right: 0px; border-radius: 8px 0px 0px 8px; padding: 15px 16px 12px 16px; }
+					.side.left { width: 66.66%; border: 1px solid $colorLightGrey; border-right: 0px; border-radius: 8px 0px 0px 8px; padding: 15px 16px 12px 16px; }
 					.side.left {
 						.name { margin-bottom: 10px; }
 						.name {
