--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -72,7 +72,7 @@
 				width: 16px; height: 16px; position: absolute; left: 50%; top: 50%; margin: -8px 0px 0px -8px; border-radius: 100%;
 				background: $colorBlack; 
 			}
-			.inner.bgColor-default { box-shadow: 0px 0px 0px 1px #dfddd0 inset; background: #fff; }
+			.inner.bgColor-default { box-shadow: 0px 0px 0px 1px $colorLightGrey inset; background: #fff; }
 			
 			.inner.textColor-black { background: $colorBlack; }
 			.inner.textColor-grey { background: $colorDarkGrey; }
