--- a/src/scss/page/main/store.scss
+++ b/src/scss/page/main/store.scss
@@ -22,7 +22,7 @@
 
 	.body { width: 100%; height: 100%; overflow-y: auto; display: flex; flex-direction: column; }
 	.body {
-		.mid { text-align: center; padding: 96px 0px 56px 0px; margin: 0px auto; padding-bottom: 4px; }
+		.mid { text-align: center; padding: 92px 0px 56px 0px; margin: 0px auto; padding-bottom: 4px; }
 		.mid {
 			.title { margin-bottom: 8px; }
 			.label { @include text-paragraph; margin-bottom: 18px; }
@@ -59,8 +59,8 @@
 				.info { height: 100%; position: relative; }
 				.info {
 					.txt { width: 100%; }
-					.name { font-weight: 500; @include text-overflow-nw; }
-					.descr { width: 100%; @include text-small; color: $colorDarkGrey; @include text-overflow-nw; margin: 2px 0px 3px 0px; }
+					.name { font-weight: 500; @include text-overflow-nw; line-height: 22px; }
+					.descr { width: 100%; @include text-small; color: #929082; @include text-overflow-nw; margin: 2px 0px 3px 0px; }
 					.author { @include text-small; color: #6c6a5f; line-height: 18px; }
 					.line { width: 100%; height: 1px; background: #eae9e0; position: absolute; left: 0px; }
 				}
