--- a/src/scss/popup/feedback.scss
+++ b/src/scss/popup/feedback.scss
@@ -14,8 +14,8 @@
 	
 		.title { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; margin-bottom: 16px; }
 		.label { margin-bottom: 5px; }
-		.input { height: 40px; border: 1px solid #DFDDD0; padding: 0px 16px; }
-		.textarea { height: 108px; padding: 16px; border: 1px solid #DFDDD0; background: none; font-family: 'Inter'; }
+		.input { height: 40px; border: 1px solid $colorLightGrey; padding: 0px 16px; }
+		.textarea { height: 108px; padding: 16px; border: 1px solid $colorLightGrey; background: none; font-family: 'Inter'; }
 		
 		.icon.checkbox { margin-right: 4px; }
 		.small { @include text-small; line-height: 24px; width: calc(100% - 28px); }
