--- a/src/scss/popup/page.scss
+++ b/src/scss/popup/page.scss
@@ -12,6 +12,8 @@
 				.menu { right: 0px; top: 0px; }
 			}
 
+			.block.blockCover { left: 16px; width: calc(100% - 32px); }
+
 			#bodyWrapper > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
 			
 			.content { height: 100%; padding-top: 38px; }
