--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -13,7 +13,7 @@
 	.path { white-space: nowrap; }
 	.path {
 		.item { 
-			display: inline-block; vertical-align: top; color: #6c6a5f; margin-right: 6px; cursor: pointer; 
+			display: inline-block; vertical-align: top; color: #929082; margin-right: 6px; cursor: pointer; 
 			transition: color 0.2s ease-in-out; 
 		}
 		.item {
@@ -77,7 +77,7 @@
 	.icon.big:hover, .icon.big.active { background-color: #f3f2ec; }
 
 	.path { 
-		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px; color: #929082;
+		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px; 
 		line-height: 24px; width: 100%; text-align: center; transition: $transitionFast; -webkit-app-region: no-drag;
 	}
 	.path {
