--- a/src/scss/page/main/set.scss
+++ b/src/scss/page/main/set.scss
@@ -8,12 +8,13 @@
 			.wrapMenu { display: none; }	
 			.wrapContent { width: 100%; }
 		}
-		.block.blockFeatured { @include text-common; padding: 0px; margin: 0px; line-height: 28px; }
+		.block.blockFeatured { @include text-common; padding: 0px; margin: 0px; line-height: 22px; }
 		.block.blockFeatured {
+			.cellContent { padding: 2.5px 6px; }
 			.bullet { margin-top: -2px; }
 		}
 
-		.head { width: 696px; margin: 0px auto 24px auto; display: flex; }
+		.head { width: 696px; margin: 0px auto 40px auto; display: flex; }
 		.head {
 			.side.left { width: 96px; flex-shrink: 0; margin-right: 32px; }
 			.side.right { width: calc(100% - 128px); }
