--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -20,18 +20,18 @@
 .icon.checkbox.active { background-image: url('~img/icon/checkbox1.svg'); }
 
 .icon.relation.default { background-image: url('~img/icon/menu/action/block/relation0.svg'); }
-.icon.relation.c-longText { background-image: url('~img/icon/dataview/relation/longText.svg'); }
-.icon.relation.c-shortText { background-image: url('~img/icon/dataview/relation/shortText.svg'); }
-.icon.relation.c-number { background-image: url('~img/icon/dataview/relation/number.svg'); }
-.icon.relation.c-date { background-image: url('~img/icon/dataview/relation/date.svg'); }
-.icon.relation.c-select.isTag { background-image: url('~img/icon/dataview/relation/tag.svg'); }
-.icon.relation.c-select.isStatus { background-image: url('~img/icon/dataview/relation/status.svg'); }
-.icon.relation.c-object { background-image: url('~img/icon/dataview/relation/object.svg'); }
-.icon.relation.c-file { background-image: url('~img/icon/dataview/relation/file.svg'); }
-.icon.relation.c-checkbox { background-image: url('~img/icon/dataview/relation/checkbox.svg'); }
-.icon.relation.c-url { background-image: url('~img/icon/dataview/relation/url.svg'); }
-.icon.relation.c-email { background-image: url('~img/icon/dataview/relation/email.svg'); }
-.icon.relation.c-phone { background-image: url('~img/icon/dataview/relation/phone.svg'); }
+.icon.relation.c-longText { background-image: url('~img/icon/relation/longText.svg'); }
+.icon.relation.c-shortText { background-image: url('~img/icon/relation/shortText.svg'); }
+.icon.relation.c-number { background-image: url('~img/icon/relation/number.svg'); }
+.icon.relation.c-date { background-image: url('~img/icon/relation/date.svg'); }
+.icon.relation.c-select.isTag { background-image: url('~img/icon/relation/tag.svg'); }
+.icon.relation.c-select.isStatus { background-image: url('~img/icon/relation/status.svg'); }
+.icon.relation.c-object { background-image: url('~img/icon/relation/object.svg'); }
+.icon.relation.c-file { background-image: url('~img/icon/relation/file.svg'); }
+.icon.relation.c-checkbox { background-image: url('~img/icon/relation/checkbox.svg'); }
+.icon.relation.c-url { background-image: url('~img/icon/relation/url.svg'); }
+.icon.relation.c-email { background-image: url('~img/icon/relation/email.svg'); }
+.icon.relation.c-phone { background-image: url('~img/icon/relation/phone.svg'); }
 
 .icon.layout-page { background-image: url('~img/icon/object/page.svg'); }
 .icon.layout-human { background-image: url('~img/icon/object/human.svg'); }
