--- a/src/scss/page/main/store.scss
+++ b/src/scss/page/main/store.scss
@@ -54,7 +54,7 @@
 
 			.item {
 				.iconObject.isObjectType, .iconObject.isRelation { position: absolute; left: 0px; top: 0px; }
-				.iconObject.isUser { vertical-align: middle; margin: -1px 4px 0px 0px; }
+				.iconObject.isHuman { vertical-align: middle; margin: -1px 4px 0px 0px; }
 
 				.info { height: 100%; position: relative; }
 				.info {
