--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -50,7 +50,7 @@
 
 	.side.left { left: 6px; z-index: 1; }
 
-	.side.center { width: 512px; height: 28px; left: 50%; margin-left: -256px; white-space: nowrap; }
+	.side.center { width: 40%; height: 28px; left: 50%; margin-left: -20%; white-space: nowrap; }
 
 	.side.right { right: 10px; z-index: 1; }
 	.side.right {
