focused block highlight

--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -41,6 +41,8 @@
 		.emptyToggle:hover { color: $colorBlack; }
 	}
 
+	.focusable.isFocused { background: rgba(134, 125, 66, 0.1); }
+
 	.block > .wrapContent > .children > .block.last { margin: 0px; }
 
 	.block.isReadOnly {
