--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -14,6 +14,8 @@
 		.icon.dnd:hover { 
 			background-image: url('~img/icon/block/menu2.svg') !important; border-color: $colorOrange; box-shadow: 0px 0px 0px 1px $colorOrange;
 		}
+
+		.inputWithFile { background: #fff; }
 		
 		.colResize { width: 0px; position: relative; opacity: 0; z-index: 10; }
 		.colResize.active { opacity: 1; }
