BlockRelation new flow

--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -91,7 +91,7 @@
 	}
 
 	.side.center {
-		.icons { margin-left: 6px; display: inline-block; vertical-align: middle; }
+		.icons { margin-left: 6px; display: inline-block; vertical-align: top; }
 
 		.icon { margin: 0px; opacity: 0; }
 		.icon.plus {
