--- a/src/scss/page/main/edit.scss
+++ b/src/scss/page/main/edit.scss
@@ -4,3 +4,7 @@
 	.wrapper { padding: 38px 0px 0px 0px; }
 	.wrapper > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
 }
+
+html.platformMac.version11 {
+	.pageMainEdit .wrapper { padding-top: 38px; }
+}
