--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -107,3 +107,7 @@
 }
 
 .pageMainType > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
+
+html.platformMac.version11 {
+	.pageMainType .wrapper { padding-top: 144px; }
+}
