--- a/src/scss/page/main/media.scss
+++ b/src/scss/page/main/media.scss
@@ -57,3 +57,7 @@
 }
 
 .pageMainMedia > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
+
+html.platformMac.version11 {
+	.pageMainMedia .blocks { padding-top: 74px; }
+}
