--- a/src/scss/page/main/relation.scss
+++ b/src/scss/page/main/relation.scss
@@ -69,3 +69,7 @@
 }
 
 .pageMainRelation > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
+
+html.platformMac.version11 {
+	.pageMainRelation .wrapper { padding-top: 144px; }
+}
