--- a/src/scss/page/main/set.scss
+++ b/src/scss/page/main/set.scss
@@ -32,4 +32,8 @@
 	}
 }
 
+html.platformMac.version11 {
+	.pageMainSet .wrapper { padding-top: 144px; }
+}
+
 .pageMainSet > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
