--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -1,10 +1,10 @@
 @import "~scss/_vars";
 
 .menus {
-    .menu.menuDataviewRelationType, 
     .menu.menuDataviewRelationList, 
     .menu.menuDataviewRelationEdit, 
 	.menu.menuRelationSuggest, 
+	.menu.menuRelationType, 
 	.menu.menuDataviewViewEdit,
     .menu.menuDataviewViewList,
 	.menu.menuDataviewObjectType,
