--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -39,6 +39,10 @@
 	}
 }
 
+.editorWrapper.isDraft {
+	.blocks .block.blockFeatured { display: none; }
+}
+
 html.withDataview {
 	.blocks .block.blockFeatured { display: flex; }
 }
