--- a/src/scss/block/type.scss
+++ b/src/scss/block/type.scss
@@ -8,7 +8,7 @@
 
 		.filter { padding: 0px; margin-bottom: 8px; }
 		.filter {
-			.input { @include text-paragraph; height: 24px; }
+			.input { @include text-paragraph; height: 24px; background: none !important; }
 		}
 
 		.item { position: relative; padding: 8px 8px 8px 72px; height: 64px; cursor: pointer; }
