--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -20,11 +20,11 @@
 		}
 	}
 
-	.menu.menuBlockRelationList { width: 640px; padding-top: 8px; }
+	.menu.menuBlockRelationList { width: 640px; }
 	.menu.menuBlockRelationList {
 		.wrap { display: flex; flex-direction: column; height: 100%; }
 
-		.content { transition: none ;padding: 0px; }
+		.content { transition: none; padding: 0px; }
 		.items { height: 100%; }
 		.input { border: 0px; padding: 0px; }
 
@@ -37,6 +37,9 @@
 		.cellContent.c-longText {
 			.name { -webkit-line-clamp: 1; -webkit-box-orient: vertical; display: -webkit-box; }
 		}
+	}
+	.menu.menuBlockRelationList.withFilter {
+		.content { padding-top: 8px; }
 	}
 	
 	.menu.menuBlockRelationEdit {
